fix: Updating CSS for tooltip to fix position shift issue (#474)
* fixing css for tooltip

* Create tasty-ears-fly.md

--- a/packages/design-system/src/Tooltip/Tooltip.css
+++ b/packages/design-system/src/Tooltip/Tooltip.css
@@ -1,12 +1,12 @@
 /* TODO: Find a better way to style */
 /* wrapping in styled component is not working anymore */
-.ads-v2-tooltip {
+.rc-tooltip.ads-v2-tooltip {
   --tooltip-background-color: var(--ads-v2-color-bg-emphasis-max);
   --tooltip-color: var(--ads-v2-color-fg-on-emphasis-max);
 
   /* This is important because the styles is getting overridden by main repo */
-  opacity: 1 !important;
-  z-index: 100000 !important;
+  opacity: 1;
+  z-index: 100000;
   max-width: 300px;
   overflow: hidden;
   overflow-wrap: break-word;
